--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -166,6 +166,9 @@
     <ClCompile Include="LogicalDevice.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicalDevice.cpp" />
+    <ClCompile Include="Sampler.cpp" />
+    <ClCompile Include="Signals.cpp" />
+    <ClCompile Include="Swapchain.cpp" />
     <ClCompile Include="Win32Surface.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +180,9 @@
     <ClInclude Include="LogicalDevice.h" />
     <ClInclude Include="PhysicalDevice.h" />
     <ClInclude Include="Result.h" />
+    <ClInclude Include="Sampler.h" />
+    <ClInclude Include="Signals.h" />
+    <ClInclude Include="Swapchain.h" />
     <ClInclude Include="Vulkan.h" />
     <ClInclude Include="Win32Surface.h" />
   </ItemGroup>
