--- a/Projects/VisualVk/VisualVk.vcxproj
+++ b/Projects/VisualVk/VisualVk.vcxproj
@@ -163,6 +163,7 @@
   <ItemGroup>
     <ClCompile Include="Buffers.cpp" />
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="ComputePipeline.cpp" />
     <ClCompile Include="DescriptorSet.cpp" />
     <ClCompile Include="DeviceMemory.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
@@ -172,7 +173,8 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PhysicalDevice.cpp" />
     <ClCompile Include="PipelineLayout.cpp" />
-    <ClCompile Include="Pipelines.cpp" />
+    <ClCompile Include="GraphicsPipeline.cpp" />
+    <ClCompile Include="RayTracingPipeline.cpp" />
     <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="ShaderModule.cpp" />
     <ClCompile Include="Swapchain.cpp" />
@@ -183,6 +185,7 @@
     <ClInclude Include="ArrayProxy.h" />
     <ClInclude Include="Buffers.h" />
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="ComputePipeline.h" />
     <ClInclude Include="DescriptorSet.h" />
     <ClInclude Include="DeviceMemory.h" />
     <ClInclude Include="Enums.h" />
@@ -193,7 +196,8 @@
     <ClInclude Include="LogicalDevice.h" />
     <ClInclude Include="PhysicalDevice.h" />
     <ClInclude Include="PipelineLayout.h" />
-    <ClInclude Include="Pipelines.h" />
+    <ClInclude Include="GraphicsPipeline.h" />
+    <ClInclude Include="RayTracingPipeline.h" />
     <ClInclude Include="Result.h" />
     <ClInclude Include="Sampler.h" />
     <ClInclude Include="ShaderModule.h" />
