--- a/Projects/VisualVk/VisualVk.vcxproj.filters
+++ b/Projects/VisualVk/VisualVk.vcxproj.filters
@@ -28,14 +28,26 @@
     <Filter Include="2. Resources\3. Sampler">
       <UniqueIdentifier>{70159800-4b33-40af-9a07-e9d07b76c4da}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\5. Swapchain">
+    <Filter Include="3. Commands">
+      <UniqueIdentifier>{085c6348-8a77-4b5b-ba60-7f4be8fd8493}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\0. Sync">
+      <UniqueIdentifier>{b8357a39-19e7-4b4d-af2c-e3999f944ca6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\4. Swapchain">
       <UniqueIdentifier>{ae5d22d0-bcc1-4655-8ed7-e1b05e84d988}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\4. Pipelines">
-      <UniqueIdentifier>{bb636acc-ce26-4b55-985c-93b0152190de}</UniqueIdentifier>
+    <Filter Include="2. Resources\5. Framebuffer">
+      <UniqueIdentifier>{5275c891-e9a0-46cb-82ff-63ac4dcef833}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\7. Win32Surface">
+    <Filter Include="2. Resources\6. Win32Surface">
       <UniqueIdentifier>{85a54d54-3019-4abe-98a7-b36b6c2e046c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\10. PipelineLayout">
+      <UniqueIdentifier>{31e182d7-9735-439b-8269-8520c6713011}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\7. DescriptorSet">
+      <UniqueIdentifier>{901bc216-6cee-43c8-939b-949cdca50676}</UniqueIdentifier>
     </Filter>
     <Filter Include="2. Resources\8. DeviceMemory">
       <UniqueIdentifier>{bbefa902-6376-42c1-bbba-1ab39c798526}</UniqueIdentifier>
@@ -43,20 +55,14 @@
     <Filter Include="2. Resources\9. ShaderModule">
       <UniqueIdentifier>{b44ea248-a3e3-4813-a519-3185ec6158d6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\6. Framebuffer">
-      <UniqueIdentifier>{5275c891-e9a0-46cb-82ff-63ac4dcef833}</UniqueIdentifier>
+    <Filter Include="2. Resources\13. RayTracingPipeline">
+      <UniqueIdentifier>{00a81edc-b341-4da6-a14d-57b647f203d1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="3. Commands">
-      <UniqueIdentifier>{085c6348-8a77-4b5b-ba60-7f4be8fd8493}</UniqueIdentifier>
+    <Filter Include="2. Resources\12. ComputePipeline">
+      <UniqueIdentifier>{6c0bd692-808b-417f-8991-1c008272c828}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\0. Sync">
-      <UniqueIdentifier>{b8357a39-19e7-4b4d-af2c-e3999f944ca6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\10. DescriptorSet">
-      <UniqueIdentifier>{901bc216-6cee-43c8-939b-949cdca50676}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\11. PipelineLayout">
-      <UniqueIdentifier>{31e182d7-9735-439b-8269-8520c6713011}</UniqueIdentifier>
+    <Filter Include="2. Resources\11. GraphicsPipeline">
+      <UniqueIdentifier>{bb636acc-ce26-4b55-985c-93b0152190de}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -71,16 +77,16 @@
       <Filter>1. Context\1. LogicalDevice</Filter>
     </ClCompile>
     <ClCompile Include="Win32Surface.cpp">
-      <Filter>2. Resources\7. Win32Surface</Filter>
+      <Filter>2. Resources\6. Win32Surface</Filter>
     </ClCompile>
     <ClCompile Include="Swapchain.cpp">
-      <Filter>2. Resources\5. Swapchain</Filter>
+      <Filter>2. Resources\4. Swapchain</Filter>
     </ClCompile>
     <ClCompile Include="Sampler.cpp">
       <Filter>2. Resources\3. Sampler</Filter>
     </ClCompile>
     <ClCompile Include="Framebuffer.cpp">
-      <Filter>2. Resources\6. Framebuffer</Filter>
+      <Filter>2. Resources\5. Framebuffer</Filter>
     </ClCompile>
     <ClCompile Include="DeviceMemory.cpp">
       <Filter>2. Resources\8. DeviceMemory</Filter>
@@ -94,11 +100,8 @@
     <ClCompile Include="Buffers.cpp">
       <Filter>2. Resources\1. Buffers</Filter>
     </ClCompile>
-    <ClCompile Include="Pipelines.cpp">
-      <Filter>2. Resources\4. Pipelines</Filter>
-    </ClCompile>
     <ClCompile Include="PipelineLayout.cpp">
-      <Filter>2. Resources\11. PipelineLayout</Filter>
+      <Filter>2. Resources\10. PipelineLayout</Filter>
     </ClCompile>
     <ClCompile Include="Commands.cpp">
       <Filter>3. Commands</Filter>
@@ -107,7 +110,16 @@
       <Filter>2. Resources\0. Sync</Filter>
     </ClCompile>
     <ClCompile Include="DescriptorSet.cpp">
-      <Filter>2. Resources\10. DescriptorSet</Filter>
+      <Filter>2. Resources\7. DescriptorSet</Filter>
+    </ClCompile>
+    <ClCompile Include="RayTracingPipeline.cpp">
+      <Filter>2. Resources\13. RayTracingPipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicsPipeline.cpp">
+      <Filter>2. Resources\11. GraphicsPipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="ComputePipeline.cpp">
+      <Filter>2. Resources\12. ComputePipeline</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -136,16 +148,16 @@
       <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="Win32Surface.h">
-      <Filter>2. Resources\7. Win32Surface</Filter>
+      <Filter>2. Resources\6. Win32Surface</Filter>
     </ClInclude>
     <ClInclude Include="Swapchain.h">
-      <Filter>2. Resources\5. Swapchain</Filter>
+      <Filter>2. Resources\4. Swapchain</Filter>
     </ClInclude>
     <ClInclude Include="Sampler.h">
       <Filter>2. Resources\3. Sampler</Filter>
     </ClInclude>
     <ClInclude Include="Framebuffer.h">
-      <Filter>2. Resources\6. Framebuffer</Filter>
+      <Filter>2. Resources\5. Framebuffer</Filter>
     </ClInclude>
     <ClInclude Include="DeviceMemory.h">
       <Filter>2. Resources\8. DeviceMemory</Filter>
@@ -159,11 +171,8 @@
     <ClInclude Include="Buffers.h">
       <Filter>2. Resources\1. Buffers</Filter>
     </ClInclude>
-    <ClInclude Include="Pipelines.h">
-      <Filter>2. Resources\4. Pipelines</Filter>
-    </ClInclude>
     <ClInclude Include="PipelineLayout.h">
-      <Filter>2. Resources\11. PipelineLayout</Filter>
+      <Filter>2. Resources\10. PipelineLayout</Filter>
     </ClInclude>
     <ClInclude Include="Commands.h">
       <Filter>3. Commands</Filter>
@@ -172,7 +181,16 @@
       <Filter>2. Resources\0. Sync</Filter>
     </ClInclude>
     <ClInclude Include="DescriptorSet.h">
-      <Filter>2. Resources\10. DescriptorSet</Filter>
+      <Filter>2. Resources\7. DescriptorSet</Filter>
+    </ClInclude>
+    <ClInclude Include="RayTracingPipeline.h">
+      <Filter>2. Resources\13. RayTracingPipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicsPipeline.h">
+      <Filter>2. Resources\11. GraphicsPipeline</Filter>
+    </ClInclude>
+    <ClInclude Include="ComputePipeline.h">
+      <Filter>2. Resources\12. ComputePipeline</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
