--- a/Projects/Lava/Lava.vcxproj.filters
+++ b/Projects/Lava/Lava.vcxproj.filters
@@ -19,57 +19,59 @@
     <Filter Include="1. Context\2. PhysicalDevice">
       <UniqueIdentifier>{5253d1d7-ee48-413f-8bfe-8018e65696e6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\1. Buffers">
-      <UniqueIdentifier>{f304ef35-6e04-4752-8c35-6e8c5d79a643}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\2. Images">
-      <UniqueIdentifier>{4cbbbcff-f018-4389-acd6-a5c4d6caf1c2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\3. Sampler">
-      <UniqueIdentifier>{70159800-4b33-40af-9a07-e9d07b76c4da}</UniqueIdentifier>
-    </Filter>
     <Filter Include="3. Commands">
       <UniqueIdentifier>{085c6348-8a77-4b5b-ba60-7f4be8fd8493}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted">
+      <UniqueIdentifier>{b5b66fed-d87f-42cf-a324-20790b11beb4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\1. Buffers">
+      <UniqueIdentifier>{f304ef35-6e04-4752-8c35-6e8c5d79a643}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\2. Images">
+      <UniqueIdentifier>{4cbbbcff-f018-4389-acd6-a5c4d6caf1c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\7. DescriptorSet">
+      <UniqueIdentifier>{901bc216-6cee-43c8-939b-949cdca50676}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\8. DeviceMemory">
+      <UniqueIdentifier>{bbefa902-6376-42c1-bbba-1ab39c798526}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\10. PipelineLayout">
+      <UniqueIdentifier>{31e182d7-9735-439b-8269-8520c6713011}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\11. GraphicsPipeline">
+      <UniqueIdentifier>{bb636acc-ce26-4b55-985c-93b0152190de}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\12. ComputePipeline">
+      <UniqueIdentifier>{6c0bd692-808b-417f-8991-1c008272c828}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\13. RayTracingPipelineNV">
+      <UniqueIdentifier>{00a81edc-b341-4da6-a14d-57b647f203d1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2. Resources\NotCompleted\14. AccelerationStructureNV">
+      <UniqueIdentifier>{f10b926b-6e02-4cbb-9876-12c7d06a10e4}</UniqueIdentifier>
     </Filter>
     <Filter Include="2. Resources\0. Sync">
       <UniqueIdentifier>{b8357a39-19e7-4b4d-af2c-e3999f944ca6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\4. Swapchain">
-      <UniqueIdentifier>{ae5d22d0-bcc1-4655-8ed7-e1b05e84d988}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\5. Framebuffer">
-      <UniqueIdentifier>{5275c891-e9a0-46cb-82ff-63ac4dcef833}</UniqueIdentifier>
+    <Filter Include="2. Resources\3. Sampler">
+      <UniqueIdentifier>{70159800-4b33-40af-9a07-e9d07b76c4da}</UniqueIdentifier>
     </Filter>
     <Filter Include="2. Resources\6. Win32Surface">
       <UniqueIdentifier>{85a54d54-3019-4abe-98a7-b36b6c2e046c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\10. PipelineLayout">
-      <UniqueIdentifier>{31e182d7-9735-439b-8269-8520c6713011}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\7. DescriptorSet">
-      <UniqueIdentifier>{901bc216-6cee-43c8-939b-949cdca50676}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\8. DeviceMemory">
-      <UniqueIdentifier>{bbefa902-6376-42c1-bbba-1ab39c798526}</UniqueIdentifier>
+    <Filter Include="2. Resources\4. Swapchain">
+      <UniqueIdentifier>{ae5d22d0-bcc1-4655-8ed7-e1b05e84d988}</UniqueIdentifier>
     </Filter>
     <Filter Include="2. Resources\9. ShaderModule">
       <UniqueIdentifier>{b44ea248-a3e3-4813-a519-3185ec6158d6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2. Resources\12. ComputePipeline">
-      <UniqueIdentifier>{6c0bd692-808b-417f-8991-1c008272c828}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\11. GraphicsPipeline">
-      <UniqueIdentifier>{bb636acc-ce26-4b55-985c-93b0152190de}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\13. RayTracingPipelineNV">
-      <UniqueIdentifier>{00a81edc-b341-4da6-a14d-57b647f203d1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="2. Resources\14. AccelerationStructureNV">
-      <UniqueIdentifier>{f10b926b-6e02-4cbb-9876-12c7d06a10e4}</UniqueIdentifier>
+    <Filter Include="2. Resources\5. Framebuffer">
+      <UniqueIdentifier>{5275c891-e9a0-46cb-82ff-63ac4dcef833}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Instance.cpp">
       <Filter>1. Context\0. Instance</Filter>
     </ClCompile>
@@ -92,19 +94,19 @@
       <Filter>2. Resources\5. Framebuffer</Filter>
     </ClCompile>
     <ClCompile Include="DeviceMemory.cpp">
-      <Filter>2. Resources\8. DeviceMemory</Filter>
+      <Filter>2. Resources\NotCompleted\8. DeviceMemory</Filter>
     </ClCompile>
     <ClCompile Include="ShaderModule.cpp">
       <Filter>2. Resources\9. ShaderModule</Filter>
     </ClCompile>
     <ClCompile Include="Images.cpp">
-      <Filter>2. Resources\2. Images</Filter>
+      <Filter>2. Resources\NotCompleted\2. Images</Filter>
     </ClCompile>
     <ClCompile Include="Buffers.cpp">
-      <Filter>2. Resources\1. Buffers</Filter>
+      <Filter>2. Resources\NotCompleted\1. Buffers</Filter>
     </ClCompile>
     <ClCompile Include="PipelineLayout.cpp">
-      <Filter>2. Resources\10. PipelineLayout</Filter>
+      <Filter>2. Resources\NotCompleted\10. PipelineLayout</Filter>
     </ClCompile>
     <ClCompile Include="Commands.cpp">
       <Filter>3. Commands</Filter>
@@ -113,19 +115,19 @@
       <Filter>2. Resources\0. Sync</Filter>
     </ClCompile>
     <ClCompile Include="DescriptorSet.cpp">
-      <Filter>2. Resources\7. DescriptorSet</Filter>
+      <Filter>2. Resources\NotCompleted\7. DescriptorSet</Filter>
     </ClCompile>
     <ClCompile Include="GraphicsPipeline.cpp">
-      <Filter>2. Resources\11. GraphicsPipeline</Filter>
+      <Filter>2. Resources\NotCompleted\11. GraphicsPipeline</Filter>
     </ClCompile>
     <ClCompile Include="ComputePipeline.cpp">
-      <Filter>2. Resources\12. ComputePipeline</Filter>
+      <Filter>2. Resources\NotCompleted\12. ComputePipeline</Filter>
     </ClCompile>
     <ClCompile Include="AccelerationStructureNV.cpp">
-      <Filter>2. Resources\14. AccelerationStructureNV</Filter>
+      <Filter>2. Resources\NotCompleted\14. AccelerationStructureNV</Filter>
     </ClCompile>
     <ClCompile Include="RayTracingPipelineNV.cpp">
-      <Filter>2. Resources\13. RayTracingPipelineNV</Filter>
+      <Filter>2. Resources\NotCompleted\13. RayTracingPipelineNV</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -151,19 +153,19 @@
       <Filter>2. Resources\5. Framebuffer</Filter>
     </ClInclude>
     <ClInclude Include="DeviceMemory.h">
-      <Filter>2. Resources\8. DeviceMemory</Filter>
+      <Filter>2. Resources\NotCompleted\8. DeviceMemory</Filter>
     </ClInclude>
     <ClInclude Include="ShaderModule.h">
       <Filter>2. Resources\9. ShaderModule</Filter>
     </ClInclude>
     <ClInclude Include="Images.h">
-      <Filter>2. Resources\2. Images</Filter>
+      <Filter>2. Resources\NotCompleted\2. Images</Filter>
     </ClInclude>
     <ClInclude Include="Buffers.h">
-      <Filter>2. Resources\1. Buffers</Filter>
+      <Filter>2. Resources\NotCompleted\1. Buffers</Filter>
     </ClInclude>
     <ClInclude Include="PipelineLayout.h">
-      <Filter>2. Resources\10. PipelineLayout</Filter>
+      <Filter>2. Resources\NotCompleted\10. PipelineLayout</Filter>
     </ClInclude>
     <ClInclude Include="Commands.h">
       <Filter>3. Commands</Filter>
@@ -172,13 +174,13 @@
       <Filter>2. Resources\0. Sync</Filter>
     </ClInclude>
     <ClInclude Include="DescriptorSet.h">
-      <Filter>2. Resources\7. DescriptorSet</Filter>
+      <Filter>2. Resources\NotCompleted\7. DescriptorSet</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsPipeline.h">
-      <Filter>2. Resources\11. GraphicsPipeline</Filter>
+      <Filter>2. Resources\NotCompleted\11. GraphicsPipeline</Filter>
     </ClInclude>
     <ClInclude Include="ComputePipeline.h">
-      <Filter>2. Resources\12. ComputePipeline</Filter>
+      <Filter>2. Resources\NotCompleted\12. ComputePipeline</Filter>
     </ClInclude>
     <ClInclude Include="Vulkan.h">
       <Filter>0. Wrappers</Filter>
@@ -196,10 +198,10 @@
       <Filter>0. Wrappers</Filter>
     </ClInclude>
     <ClInclude Include="AccelerationStructureNV.h">
-      <Filter>2. Resources\14. AccelerationStructureNV</Filter>
+      <Filter>2. Resources\NotCompleted\14. AccelerationStructureNV</Filter>
     </ClInclude>
     <ClInclude Include="RayTracingPipelineNV.h">
-      <Filter>2. Resources\13. RayTracingPipelineNV</Filter>
+      <Filter>2. Resources\NotCompleted\13. RayTracingPipelineNV</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
